[package]
name = "mint-nft-new"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_nft_new"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0" 
#you get anchor-lang when you do anchor init <PROJECT_NAME>
anchor-spl = "0.25.0"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
#Anchor-spl and mpl-token-metadata versions were set custom, these are the latest during the recording of this walk through
